# wembley-events

./: .env.example  .gitignore  Cargo.toml  README.md  wembley-events.cal  wembley-events.ics  wembley-events.json
.github/: dependabot.yml
.github/workflows/: release.yml  rust.yml  scheduled-builds.yml
src/: calendar_writer.rs  config.rs  event_merger.rs  event_orchestrator.rs  event_store.rs  events.rs  http.rs  lib.rs  main.rs  retry.rs  serpapi.rs
src/snapshots/: wembley_events__event_store__tests__check_events_match_calendar.snap  wembley_events__event_store__tests__check_events_match_calendar_json.snap  wembley_events__event_store__tests__check_events_match_calendar_with_blank_html.snap  wembley_events__events__tests__check_events_match_calendar.snap  wembley_events__events__tests__check_events_match_calendar_with_blank_html.snap  wembley_events__serpapi__tests__bad_json_in_response_serpapi_events_test.snap  wembley_events__serpapi__tests__basic_http_access_test.snap  wembley_events__serpapi__tests__basic_serpapi_events_test.snap  wembley_events__serpapi__tests__empty_serpapi_events_test.snap  wembley_events__serpapi__tests__no_events_in_response_serpapi_events_test.snap  wembley_events__serpapi__tests__no_json_response_serpapi_events_test.snap  wembley_events__serpapi__tests__one_good_one_bad_event_serpapi_events_test.snap  wembley_events__serpapi__tests__one_good_one_bad_json_event_serpapi_events_test.snap
src/test_files/: mod.rs
test/: example1.html
