[package]
name = "wembley-events"
version = "1.1.1"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.17", features = ["full"] }
reqwest = { version = "0.11"}
select = { version = "0.5"}
chrono = { version = "0.4"}
icalendar = { version = "0.11"}
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
insta = "1.11"
