[package]
name = "wembley-events"
version = "2.0.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.20", features = ["full"] }
reqwest = { version = "0.11"}
select = { version = "0.5"}
chrono = { version = "0.4"}
icalendar = { version = "0.13"}
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
insta = "1.17"
