[package]
name = "wembley-events"
version = "3.0.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.28", features = ["full"] }
reqwest = { version = "0.12" }
select = { version = "0.6" }
chrono = { version = "0.4" }
icalendar = { version = "0.11" }
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
insta = { version = "1.43", features = ["json"] }
wiremock = "0.6.5"
